# passtheroc_source2

./: .gitignore  pelicanconf.py  pyproject.toml  requirements.txt
content/: bayes_premier_league.ipynb  bayes_premier_league.nbdata  data_science_orm.nbdata  m6.nbdata  making-this-blog.nbdata  nfl_blog_post.nbdata  sBG.nbdata  xg_and_game_sitch.ipynb  xg_and_game_sitch.nbdata
content/pages/: about.md
