[tool.poetry]
name = "passtheroc-source2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "passtheroc_source2"}]

[tool.poetry.dependencies]
python = "^3.11"
pelican = "^4.8.0"
jupyter = "^1.0.0"
ipython = "^8.10.0"
nbconvert = "^7.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
